make sure to show dialog above editor scrollbars

--- a/packages/graphiql-react/src/ui/dialog.css
+++ b/packages/graphiql-react/src/ui/dialog.css
@@ -5,6 +5,12 @@
   background-color: var(--color-neutral-background);
   display: flex;
   justify-content: center;
+  /**
+   * CodeMirror has a `z-index` set for the container of the scrollbar of the
+   * editor, so we have to add one here to make sure that the dialog is shown
+   * above the editor scrollbar (if they are visible).
+   */
+  z-index: 10;
 }
 
 [data-reach-dialog-content] {
